tests/error/case_not_const.gw
#! [contains] is not const
int i;
switch(maybe) {
	case i:
}
